# robotiq-2f-140-ros2-control

./: README.md
robotiq_2f_140_custom_bringup/: CMakeLists.txt  package.xml
robotiq_2f_140_custom_bringup/config/: ros2_controllers.yaml
robotiq_2f_140_custom_bringup/launch/: bringup.launch.py
robotiq_2f_140_custom_description/: CMakeLists.txt  package.xml
robotiq_2f_140_custom_description/meshes/: finger_left.stl  finger_right.stl
robotiq_2f_140_custom_description/urdf/: robotiq_2f_140_custom.ros2_control.xacro  robotiq_2f_140_custom.urdf.xacro
