<?xml version="1.0"?>
<package format="3">
  <name>robotiq_2f_140_custom_bringup</name>
  <version>0.1.0</version>
  <description>Bringup launch and controller configuration for Robotiq 2F-140 custom gripper using ros2_control.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control_node</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robotiq_2f_140_custom_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

